fix avatar stretch

--- a/src/components/navbar/NavBarLoggedIn.module.scss
+++ b/src/components/navbar/NavBarLoggedIn.module.scss
@@ -43,6 +43,7 @@ nav {
 .profile__img {
     width: 48px;
     height: 48px;
+    object-fit: cover;
     border-radius: 50%;
 }
 
